Fix notice text alignment for smaller screens
Add missing display:block to strong element

--- a/public/sass/elements/_elements-typography.scss
+++ b/public/sass/elements/_elements-typography.scss
@@ -278,6 +278,7 @@ hr {
     margin-top: -17px; // Half the height of the important icon
   }
   strong {
+    display: block;
     padding-left: (35 + 30)+px;
     margin-left: -$gutter-half;
   }
